--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "toastify": "^2.0.1",
     "yup": "^1.0.2"
